--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/service-worker": "^16.2.0",
     "@ngneat/transloco": "^6.0.4",
     "@ngneat/transloco-persist-lang": "^5.0.0",
+    "angular-dark-mode": "^3.1.0",
     "ng2-pdf-viewer": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
