--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngneat/transloco-persist-lang": "^5.0.0",
     "angular-dark-mode": "^3.1.0",
     "ng2-pdf-viewer": "^10.0.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
